--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,25 @@
           </div>
         </div>
       </div>
+    <br/>
+
+    <!-- Mars hemispheres --> 
+    <div class="row", id='Mars-hemispheres'>
+      <div class="page-header">
+        <h2><center>Mars Hemispheres</center></h2>
+      </div>
+        {% for hemisphere in mars.hemispheres %}
+          <div class="col-md-6">
+            <div class="thumbnail">
+             <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
+             <div class="caption">
+             <h3>{{hemisphere.title}}</h3>
+             </div>
+            </div>
+          </div>
+        {% endfor %}
     </div>
+  </div>
   </body>
+
 </html>
