--- a/templates/index.html
+++ b/templates/index.html
@@ -55,16 +55,23 @@
       <div class="page-header">
         <h2><center>Mars Hemispheres</center></h2>
       </div>
-        {% for hemisphere in mars.hemispheres %}
-          <div class="col-md-6">
-            <div class="thumbnail">
-             <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
-             <div class="caption">
-             <h3>{{hemisphere.title}}</h3>
+
+        <div class="container">
+          <div class="row">        
+            {% for hemisphere in mars.hemispheres %}
+
+            <div class="col-md-3 col-sm-6">
+              <div class="thumbnail">
+              <img src="{{hemisphere.img_url | default('https://www.freeiconspng.com/thumbs/error-icon/orange-error-icon-0.png', true)}}" alt="...">
+              <div class="caption">
+               <h3>{{hemisphere.title}}</h3>
+             </div>
              </div>
             </div>
-          </div>
+        
         {% endfor %}
+      </div>
+    </div>
     </div>
   </div>
   </body>
