customized the website layout

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,16 +23,16 @@
         <div class="col-md-12">
           <div class="media">
             <div class="media-body">
-              <h2>Latest Mars News</h2>
-              <h4 class="media-heading">{{ mars.news_title }}</h4>
-              <p>{{ mars.news_paragraph }}</p>
+              <p class="text-primary"><h2><mark>Latest Mars News</mark></h2></p>
+              <h3 class="media-heading"><strong>{{ mars.news_title }}</strong></h3>
+              <h4 <p><em>{{ mars.news_paragraph }}</em></p></h4>
             </div>
           </div>
         </div>
       </div>
       <!-- Section for Featured Image and Facts table -->
       <div class="row" id="mars-featured-image">
-        <div class="col-md-8">
+        <div class="col-lg-8 col-md-8 col-sm-12">
           <h2>Featured Mars Image</h2>
           <img
             src="{{mars.featured_image }}"
@@ -40,7 +40,7 @@
             alt="Responsive image"
           />
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-4 col-md-4 col-sm-12">
           <!-- Mars Facts -->
           <div class="row" id="mars-facts">
             <h4>Mars Facts</h4>
